scss/post.scss
div.main-page-banner-logo{
    background-image: url([[pix:theme_apoa|loginbackgroundimage]]);
    background-size: contain;
    background-repeat: no-repeat;
}



h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{
    font-weight: 500;
}

.limitedwidth {
    min-width:100%!important
}

.committeeiconcontainer{
    width: 100px;
    height: 120px;
}

.committee{
    padding: 0;
    margin-left: 0.2rem;
    margin-right: 0.2rem;
}

img.committeeicon{
    width:100%;
    object-fit: cover;
    object-position: top;
    height:100%;
    border-radius: 5%;
}

.navbar.fixed-top{
    position: absolute!important;
}

.site-name{
    padding-left: 10px;
    word-wrap: break-word;
    white-space: normal;
    margin-top: 0.5rem;
    color: --var($primary);
}

.site-name.long{
    display: none;
}

.site-name.short{
    display: block;
}

@media (min-width: 400px) {
    .site-name.long{
        display: block;
    }
    .site-name.short{
        display: none;
    }
}

.footer-section a{
    color: white !important;
}

.lds-dual-ring {
    display: inline-block;
    width: 80px;
    height: 80px;
  }
  .lds-dual-ring:after {
    content: " ";
    display: block;
    width: 64px;
    height: 64px;
    margin: 8px;
    border-radius: 50%;
    border: 6px solid #fff;
    border-color: var(--primary) transparent var(--primary) transparent;
    animation: lds-dual-ring 1.2s linear infinite;
  }
  @keyframes lds-dual-ring {
    0% {
      transform: rotate(0deg);
    }
    100% {
      transform: rotate(360deg);
    }
  }

  @media (min-width: 576px) {
    .committee-container{
        width: 250px !important;
      }
  }
  .committee-container{
    width: 100px;
  }

table.discussion-list tr td:nth-child(3), table.discussion-list tr td:nth-child(4)  { display: none; }

table.discussion-list tr th:nth-child(3), table.discussion-list tr th:nth-child(4)  { display: none; }


.zoom-container .zoom-icon{
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  z-index: 1000;
  cursor: pointer;
}

.zoom-container{
  width: 100% !important;
  max-height: 100%!important;
  overflow: hidden!important;
}

#jumbomodal{
    position: absolute;
    overflow: hidden;
    transition-duration: 0.5s;
    
}

#jumbomodal.hide{
    top: 100% !important;
    height: 0%;
    display: block;
}

#jumbomodal.showing{
    animation-name: expandAnimation;
    animation-duration: 0.3s;
    animation-timing-function: ease;
    animation-fill-mode: forwards;
}

#jumbomodal.hiding {

    animation-name: reverseAnimation;
    animation-duration: 0.3s;
    animation-timing-function: ease;
    animation-fill-mode: forwards;
  }

#jumbomodal.drag {
top: 0%;
animation: none;
height: 100%;
z-index: 0;
}

#jumbomodal.show {
height: 100%;
z-index:6;
top: 0%;
}
  
#jumbomodal.show #closemodal {
    display: block;
  }
  
  @keyframes reverseAnimation {
    from {
        height: 100%;
      top: 0;
    }
    to {
        height: 0%;
      top: 100%;
    }
  }
  
@keyframes expandAnimation {
    from {
        height:0%;
      top: 100%;
    }
    to {
        height: 100%;
      top: 0;
    }
  }
  
#jumbo{
    overflow: hidden!important;
}
  
  
#closemodal {
    display: none;
  }
  
  
   
  [data-flexitour="step-backdrop"]{
    color: var(--primary)!important;
  }


.tourstepcontainer{
  animation: pulse 2s infinite;
  background-color: rgba(203, 30, 111, 1)
}

.toursteparrow::after{
  border-bottom-color: rgba(203, 30, 111, 1)!important;
  border-top-color: rgba(203, 30, 111, 1)!important
}

.tourstepbody{
  max-height: none!important;
}

@keyframes pulse {
  0% {
    transform:scale(0.99);
    box-shadow:0 0 0 0 rgba(203, 30, 111, 0.8)
  }
  50% {
    transform:scale(1);
    box-shadow:0 0 0 10px rgba(203, 30, 111, 0.2)
  }
  100% {
    transform:scale(0.99);
    
  }
}

.btn-trans:hover{
  background-color: rgb(239 83 156);
}

.titlehelpicon{
  font-size: 25px!important;
}

.countdowncont{
  padding: 5px 5px 5px 5px;
  //background-image: linear-gradient(to bottom, #e55096 0%,  #e23a89 48% , white 48%, #cb1e6f 50%);
  border-radius: 10%;
  text-shadow: 2px 2px black;
  min-width: 80px;
  //box-shadow: 0 0 5px 2px #fff;
}

.countdown{
  display: none;
  bottom: 5%;
  background: rgb(2 0 1 / 30%);
  border: 1px white;
  border-style: solid;
  position: absolute;
}


.card-columns {
  @include media-breakpoint-only(sm) {
    column-count: 2;
  }
  @include media-breakpoint-only(md) {
    column-count: 2;
  }
  @include media-breakpoint-only(lg) {
    column-count: 3;
  }
}

.afterlink{
  flex-direction: column!important;
  margin-left:  0px !important;
}

.course-section{
  margin: 5px 5px 10px 5px;
  padding: 5px 5px 5px 5px!important;
  border: 1px solid #e6e9e6!important;
}

.course-section-header{
  border-bottom: 1px solid #e6e9e6!important;
}

.sectionname{
  color: var(--primary)!important;
}

.activity-item{
  border: 0!important;
}

.course-description-item{
  padding-left: 5px!important;
}

#id_title_search_group_journal_select{
  max-width: 75%!important;
}

div .apoauserselector_wrapper{
  width: 100%;
}

body.limitedwidth #page.drawers .footer-popover { 
  max-width: 100%!important;
  width: 100%;
  border-radius: 0px;
}

.pagelayout-course #page.drawers .main-inner, body.limitedwidth #page.drawers .main-inner
,.pagelayout-standart #page.drawers .main-inner {
  max-width: 100%!important;
}
.pagelayout-mydashboard #page.drawers .main-inner {
  max-width: 90%!important;
}


.pagelayout-mydashboard .main-inner {
  max-width: 90%!important;
  width: 90%!important;
}

.pagelayout-standard #page.drawers .footer-popover, body.limitedwidth #page.drawers .footer-popover{
  max-width: 100%!important;
  border-radius: 0px;
}

